--- a/HW08.html
+++ b/HW08.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="zh-tw">
   <head>
@@ -7,13 +6,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>網頁程式設計</title>
+    <title>HW8</title>
 
   </head>
   <body>
-    <h1>網頁作業區</h1>
-
-        
         <div class="col-md-8">
           <form oninput="result.value=parseFloat(a.value)/((parseFloat(b.value)/100)*(parseFloat(b.value)/100))">
           <p>體重:<input type="number" id="a" name="a" value="100">kg</p>
